typej/deployment/applications/teamspeak6/teamspeak6.ingress-route-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: teamspeak6
spec:
  entryPoints:
    - teamspeak6-file
  routes:
    - services:
        - name: teamspeak6
          port: file-transfer
          tls: false
      match: HostSNI(`*`) # Matches all SNI hosts. mc-router will handle the routing based on the SNI host.
